<resources>
    <string name="app_name">Go4Lunch</string>


    <string name="main_activity_description">Discute avec tes mentors, tout simplement.</string>


    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Discute avec un mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <!-- GoogleMap API -->

    <string name="google_map_api_key">AIzaSyANygkUK5W0oWtDJQ6TV6dwYEdAe2zkONA</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id">515956462439198</string>
    <string name="fb_login_protocol_scheme">fb515956462439198</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">uBV9ChjIQYJoBNQeZfbNad8X7</string>
    <string name="twitter_consumer_secret" translatable="false">tS5h9p9RHsXxocdcfoq5AH1J7mIOO0UHiMHfHgGqGGmy9CUzph</string>

    <!-- Bottom Navigation View -->
    <string name="bottom_navigation_view_map_view">Map View</string>
    <string name="bottom_navigation_view_list_view">List View</string>
    <string name="bottom_navigation_view_workmates">Workmates</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_rationale">Permission for location needed</string>
    <string name="pick_place">Choose a place</string>
    <string name="profileactivity_adiag_title_enter_your_name">Enter your name</string>
    <string name="profileactivity_toast_update_profile_success">\"your profile is update \"</string>
    <string name="profileactivity_toast_update_error">\"error please retry \"</string>
    <string name="profileactivity_adiag_btn_cancel">Cancel</string>
    <string name="profileactivity_adiag_btn_yes">Yes</string>
    <string name="profileactivity_adiag_title_picture_add">Your Photo URL</string>
    <string name="profileactivity_adiag_message_picture_add">here</string>
    <string name="sharedpreference_name_go4lunch">go4lunch</string>
    <string name="mainactivty_toast_restaurant_not_in_range">Le restaurant n\'est pas dans le rayon de recherche</string>
    <string name="detailactivity_call_formating">tel:</string>
    <string name="detailactivity_toast_permission_denied">Cannot make call without your permission</string>
    <string name="rv_adapter_workmat_book">\ is joining!\</string>
    <string name="restaurant_fragment_restaurant_is_not_in_bounds">The restaurant is not within the search radius</string>

</resources>
