<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/activity_mentor_chat_add_message_container"
        >

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/activity_mentor_chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_mentor_chat_error"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_mentor_chat_recycler_view_not_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/activity_mentor_chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="@dimen/default_margin"
        android:layout_above="@id/activity_mentor_chat_add_message_container"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_black_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- TEXT MESSAGE EDIT TEXT -->
        <EditText
            android:id="@+id/activity_mentor_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/text_input_title_mentor_chat_activity"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/activity_mentor_chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_mentor_chat_activity" />

    </LinearLayout>

</RelativeLayout>